<resources>
    <string name="app_name">Quiz</string>

    <!-- クイズ画面 -->
    <string name="question_label"> 問題文</string>
    <string name="count_label">Q%d</string>
    <string name="btn_answer">選択肢</string>

    <!-- 結果画面 -->
    <string name="result_title">結果</string>
    <string name="result_score">5問中%d問正解</string>
    <string name="btn_try_again">もう一度</string>
    <string name="end_btn">ホームへ戻る</string>

    <!-- カレンダー -->
    <string name="calendar">カレンダー</string>


</resources>