<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:background="#fffaf0"
    tools:context=".QuestionActivity"
    tools:ignore="UsingOnClicklnXml">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/img_question_01" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="9">
                <TextView
                    android:id="@+id/countLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.12"
                    android:text="@string/count_label"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:translationY="15dp" />

                <TextView
                    android:id="@+id/questionLabel"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.88"
                    android:text="@string/question_label"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4"
        android:weightSum="10"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:indeterminate="false"
                    android:max="5"
                    android:progress="5"
                    android:indeterminateTint="@color/Red"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/answerBtn1"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="checkAnswer"
                    android:text="@string/btn_answer"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/answerBtn2"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="checkAnswer"
                    android:text="@string/btn_answer"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/answerBtn3"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="checkAnswer"
                    android:text="@string/btn_answer"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/answerBtn4"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="checkAnswer"
                    android:text="@string/btn_answer"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>



